--- a/LIFF.html
+++ b/LIFF.html
@@ -22,14 +22,14 @@
 
             liff.openWindow({
                 url: targetUrlDec,
-                external: false
+                external: true
             })
         };
 
         var initerr = function (data) {
             liff.openWindow({
                 url: targetUrlDec,
-                external: false
+                external: true
             })
         }
         
