--- a/LIFF.html
+++ b/LIFF.html
@@ -20,11 +20,11 @@
 
             xmlHttp.send(null);
 
-            window.location.replace(targetUrlDec);
+            window.replace(targetUrlDec);
         };
 
         var initerr = function (data) {
-            window.location.replace(targetUrlDec);
+            window.replace(targetUrlDec);
         }
         
         liff.init(init, initerr);
