--- a/LIFF.html
+++ b/LIFF.html
@@ -6,7 +6,6 @@
     <title>Insert title here</title>
     <script type="text/javascript" src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script type="text/javascript">
-		alert('test');
         var url_string = location.href;
         var url = new URL(url_string);
         var s = location.search;
@@ -16,10 +15,10 @@
         var xmlHttp = new XMLHttpRequest();
 
         var init = function (data) {
-            xmlHttp.open('GET', 'https://dev.mindcraft.com.tw:51000/open_url/line?target=' + targetUrlEnc +
+            xmlHttp.open('POST', 'https://dev.mindcraft.com.tw:51000/open_url/line?target=' + targetUrlEnc +
                 '&userId=' + data.context.userId, true);
 
-            xmlHttp.send(null);
+            xmlHttp.send(JSON.stringify(data));
 
             window.location.replace(targetUrlDec);
         };
