--- a/LIFF.html
+++ b/LIFF.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant-TW">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
+	<meta http-equiv="CACHE-CONTROL" content="NO-CACHE"> 
     <title>Insert title here</title>
     <script type="text/javascript" src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script type="text/javascript">
