--- a/LIFF.html
+++ b/LIFF.html
@@ -7,7 +7,7 @@
     <title>Insert title here</title>
     <script type="text/javascript" src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script type="text/javascript">
-	alert('test')
+		alert('test');
         var _profile = {};
         var url_string = location.href;
         var url = new URL(url_string);
