--- a/LIFF.html
+++ b/LIFF.html
@@ -29,7 +29,7 @@
                 }
             )
 			
-            xmlHttp.send(_profile);
+            xmlHttp.send(JSON.stringify(_profile));
 
             window.location.replace(targetUrlDec);
         };
